--- a/infrastructure/buildspec.yml
+++ b/infrastructure/buildspec.yml
@@ -8,7 +8,7 @@ phases:
       - gem install jekyll bundler
       - bundle install
       - echo Starting build
-      - bundle exec jekyll build --trace
+      - bundle exec jekyll build
       - echo Build finished
 artifacts:
   name: "BuildOutput"
